cabal-version: 2.2
version: 0.14
name: neural-data
synopsis: Analysis of neural data
license-file: LICENSE
author: Sacha Sokoloski
maintainer: sacha.sokoloski@gmail.com
category: Data
build-type: Simple


library
    hs-source-dirs: src
    exposed-modules:
        NeuralData
        NeuralData.Empirical
        NeuralData.VonMises
        NeuralData.Mixture
    build-depends:
        base,
        math-functions,
        containers,
        goal-core,
        goal-geometry,
        goal-probability,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise
    default-language: Haskell2010
    ghc-options: -O2 -Wall -fplugin=GHC.TypeLits.KnownNat.Solver -fplugin=GHC.TypeLits.Normalise -fconstraint-solver-iterations=10
