cabal-version: 2.2
version: 0.15
name: neural-data
synopsis: Analysis of neural data
license-file: LICENSE
author: Sacha Sokoloski
maintainer: sacha.sokoloski@gmail.com
category: Data
build-type: Simple


library
    hs-source-dirs: src
    exposed-modules:
        NeuralData
        --NeuralData.Unconditional
        --NeuralData.Conditional.Empirical
        NeuralData.Conditional.VonMises
        NeuralData.Conditional.VonMises.Analysis
        NeuralData.Conditional.VonMises.Divergence
        NeuralData.Conditional.VonMises.Training
    build-depends:
        base,
        math-functions,
        containers,
        goal-core,
        goal-geometry,
        goal-probability,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise
    default-extensions:
        -- NoStarIsType,
        ScopedTypeVariables,
        ExplicitNamespaces,
        TypeOperators,
        KindSignatures,
        DataKinds,
        RankNTypes,
        TypeFamilies,
        FlexibleContexts,
        MultiParamTypeClasses,
        ConstraintKinds,
        FlexibleInstances
    default-language: Haskell2010
    ghc-options: -O2 -Wall -fplugin=GHC.TypeLits.KnownNat.Solver -fplugin=GHC.TypeLits.Normalise -fconstraint-solver-iterations=10
