cabal-version: 2.4
version: 0.16
name: neural-data
synopsis: Analysis of neural data
license-file: LICENSE
author: Sacha Sokoloski
maintainer: sacha.sokoloski@gmail.com
category: Data
build-type: Simple


library
    hs-source-dirs: src
    exposed-modules:
        NeuralData
        --NeuralData.Unconditional
        --NeuralData.Conditional.Empirical
        NeuralData.Conditional
        NeuralData.Conditional.VonMises
        NeuralData.Conditional.VonMises.Analysis
        NeuralData.Conditional.VonMises.Divergence
        NeuralData.Conditional.VonMises.Training
    build-depends:
        base,
        math-functions,
        containers,
        goal-core,
        goal-geometry,
        goal-probability,
        ghc-typelits-knownnat,
        ghc-typelits-natnormalise
    default-extensions:
        -- NoStarIsType,
        ScopedTypeVariables,
        ExplicitNamespaces,
        TypeOperators,
        KindSignatures,
        DataKinds,
        RankNTypes,
        TypeFamilies,
        FlexibleContexts,
        MultiParamTypeClasses,
        ConstraintKinds,
        FlexibleInstances
    default-language: Haskell2010
    ghc-options: -Wall
